# gaffa

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/: gaffa.h
src/: CMakeLists.txt  array.cpp  array.h  ast.h  compiler-fixup.h  compiler.cpp  compiler.h  dedupset.cpp  dedupset.h  defs.cpp  defs.h  gaalloc.cpp  gaalloc.h  gacoro.cpp  gacoro.h  gaimpdbg.cpp  gaimpdbg.h  gainternal.cpp  gainternal.h  gaobj.cpp  gaobj.h  gavm.cpp  gavm.h  gc.cpp  gc.h  hashfunc.cpp  hashfunc.h  hlir.cpp  hlir.h  io_libc.cpp  io_libc.h  lex.cpp  lex.h  main.cpp  mlgraph.cpp  mlgraph.h  mlir.cpp  mlir.h  oldparser.h  parser.cpp  (+23 more)
test/: parser-fail.txt  parser.txt  sumloop.lua  test.txt
test/parser_neg/: const-assign.txt  const-assign2.txt  decl-assign-too-few.txt  func-arg-var.txt
test/parser_pos/: assign-multi-return.txt  deferred-mutable-upvalue-assign.txt  deferred-upvalue-assign.txt  global-mutable-symbol.txt  incorrect-assignment.txt  method-with-self.txt  methods.txt  multi-assignment.txt  multi-assignment2.txt  mutable-upvalue-assign.txt  operator-overload.txt  optional-assign.txt  simple-assignments.txt  simple-exprs.txt  simple-functions.txt
test/typecheck_neg/: literal-cast.txt  return-type-deduction.txt  simple-type-mismatch.txt
test/typecheck_pos/: literal-implicit-cast.txt  return-type-deduction-with-implicit-cast.txt  return-type-deduction.txt
